# war-cpp

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
HelloWorld/: main
HelloWorld/main.dSYM/Contents/Resources/DWARF/: main
HelloWorld/main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
PrintStandard/: PrintStandard  PrintStandard.cpp
PrintStandard/PrintStandard.dSYM/Contents/: Info.plist
PrintStandard/PrintStandard.dSYM/Contents/Resources/DWARF/: PrintStandard
PrintStandard/PrintStandard.dSYM/Contents/Resources/Relocations/x86_64/: PrintStandard.yml
